# mini-health-check

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs
